2019-04-13  Dominique d'Humieres  <dominiq@gcc.gnu.org>

PR fortran/79842
	* module.c (gfc_use_module): use complete sentences.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@270338 138bc75d-0d04-0410-961f-82ee72b054a4